--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
     "@workspace/ui": "workspace:*",
+    "date-fns": "^4.1.0",
     "echarts": "^6.0.0",
     "echarts-for-react": "^3.0.5",
     "lucide-react": "^0.475.0",
@@ -26,6 +27,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.3",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
