--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
+    "react-plotly.js": "^2.6.0",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "xlsx": "^0.18.5",
@@ -43,6 +44,7 @@
     "@types/papaparse": "^5.5.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/react-plotly.js": "^2.6.3",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.32.0",
